@@ -45,6 +45,8 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     - Use --add-location=file in msgmerge and xgettext commands.
     - Use --porefs=noline for po4a command.
   * Wrap file references in man page PO files.
+  * Switch Dpkg::Checksums from using checksum programs to the more portable
+    Digest modules. Obsolete the 'program' property, and add a 'name' one.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 09 Dec 2014 23:53:18 +0100
 
